Crud cadastro de telas completo , reformulação de layout

--- a/Projeto_portifolio/Views/Components/ApresentacaoLayout.cshtml
+++ b/Projeto_portifolio/Views/Components/ApresentacaoLayout.cshtml
@@ -35,7 +35,7 @@
             }
 
         <div style="display:none;" id="desc-principal" class="description-main">
-            @Html.Raw(Model.dadosPagina.conteudo_pagina.ToString());
+            @Html.Raw(Model.dadosPagina.conteudo_pagina.ToString())
             <partial name="~/Views/Components/ButtonExportCurriculum.cshtml" />
 
         </div>
