--- a/Projeto_portifolio/Views/Shared/Login/_JsLogin.cshtml
+++ b/Projeto_portifolio/Views/Shared/Login/_JsLogin.cshtml
@@ -11,7 +11,7 @@
 <script type="text/javascript">
 
 $(document).ready(function(){
-    $("body").css({
+    $("#imagemFundo").css({
             'background-image':'url("@Url.Content("~/Fotos_sistema/fundo_manager_portifolio.jpg")")',
             'background-repeat':'no-repeat',
             'background-size':'cover'
