--- a/Projeto_portifolio/Views/Shared/PartialViewMenu.cshtml
+++ b/Projeto_portifolio/Views/Shared/PartialViewMenu.cshtml
@@ -1,7 +1,7 @@
 ﻿@model List<ProjetoPortifolio.Models.ButtonSite>
 
 @{
-
+    Layout = null;
     var viewDataContent = ViewData["ViewDataContent"].ToString();
 }
 
