--- a/Projeto_portifolio/Views/Shared/Login/Login.cshtml
+++ b/Projeto_portifolio/Views/Shared/Login/Login.cshtml
@@ -5,9 +5,16 @@
   
 }
 
-<style>
+<style type="text/css">
 
-    .form-signin {
+    html
+    {
+        overflow-y:hidden;
+        overflow-x:hidden;
+    }
+
+    .form-signin 
+    {
         width: 100%;
         max-width: 358px;
         padding: 15px;
@@ -15,7 +22,8 @@
     }
 
 
-    .cmp_form {
+    .cmp_form 
+    {
         width: 330px;
     }
     
