--- a/Projeto_portifolio/Views/Shared/Manager/Manager_principal.cshtml
+++ b/Projeto_portifolio/Views/Shared/Manager/Manager_principal.cshtml
@@ -59,178 +59,65 @@
 </div>
 
 <partial name="~/Views/Components/MensagemAlerta.cshtml">
+<div class="row">
 
-    <div class="box-itens" style="width:1282px;">
-        <div class="accordion" id="accordionExample">
-            <!-- area titulo geral -->
-            <div class="card">
-                <div class="card-header" id="headingOne">
-                    <h2 class="mb-0">
-                        <span class="fa fa-pen-alt"></span> Modificação de Titulo Geral
-                        <a class="btn_toggle fa fa-arrow-circle-down fa-pull-right"  data-toggle="collapse" data-target="#tabTituloGeral"></a>
-                    </h2>
-                </div>
-                <div id="tabTituloGeral" class="collapse show" aria-labelledby="headingOne" data-parent="#accordionExample">
-                    <div class="card-body">
-                        @using(@Html.BeginForm("gravaLinkUrlPrincipal","managerAlteracao",FormMethod.Post))
-                        {
-                            @Html.AntiForgeryToken()
-                            <div class="row">
-                                <div class="col col-md"></div>
-                                <div class="col col-sm-6 col-md-5 col-lg-8">
-                                    @Html.LabelFor(r=>r.cadastroLink.linkUrl)<br/>
-                                    @Html.ValidationMessageFor(r => r.cadastroLink.linkUrl, "", new { @style = "color:red;!important" })
-                                    @Html.TextBoxFor(r=>r.cadastroLink.linkUrl , new { @class="form-control input", placeholder="Url do site" })
-                                </div>
-                                <div class="col col-md"></div>
-                            </div>
-                            
-                            <hr/>
-                            
-                            <div class="row">
-                                 <div class="col col-md"></div>
-                                    <div class="col col-sm-6 col-md-5 col-lg-8">    
-                                        @Html.LabelFor(r=>r.cadastroLink.linkDescricao)<br/>
-                                        @Html.ValidationMessageFor(r => r.cadastroLink.linkDescricao, "", new { @style = "color:red;!important" })
-                                        @Html.TextBoxFor(r=>r.cadastroLink.linkDescricao, new { @class="form-control input", placeholder="Descrição da URL" })
-                                    </div>  
-                                <div class="col col-md"></div>
-                            </div>
-                        <br/>
-                        <div class="row">
-                            <div class="col col-md"></div>
-                            <div class="col col-md"><button type="submit" class="btn btn-lg btn-primary btn-block"><span class="fa fa-save"></span> &nbsp; Salvar </button></div>
-                            <div class="col col-md"></div>
+<div class="col col-md"></div>
+    <div class="col col-md-12">
+        <div class="box-itens">
+            <div class="accordion" id="accordionExample">
+                <!-- area titulo geral -->
+                <div class="card">
+                    <div class="card-header" id="headingOne">
+                        <h2 class="mb-0">
+                            <span class="fa fa-pen-alt"></span> Modificação de Titulo Geral
+                            <a class="btn_toggle fa fa-arrow-circle-down fa-pull-right"  data-toggle="collapse" data-target="#tabTituloGeral"></a>
+                        </h2>
+                    </div>
+                    <div id="tabTituloGeral" class="collapse show" aria-labelledby="headingOne" data-parent="#accordionExample">
+                        <div class="card-body">
+                        <partial name="~/Views/Components/CadastroLinkPartial.cshtml" model="new ProjetoPortifolio.Models.ModelCadastroLink(){ linkDescricao=String.Empty, linkUrl =String.Empty }">
                         </div>
-                        }
-
-                    @*
-               
-                        <fieldset id="area_Titulo_geral">
-                            @{
-                                int contador = 1;
-                                string IdFormulario = "formularioSubmit" + @contador.ToString();
-
-                                <form class="form-inline" id="@IdFormulario" action="">
-                                    @foreach (string forms in Model.formularios)
-                                    {
-                                        @Html.Raw(forms + "&nbsp&nbsp&nbsp");
-                                    }
-                                </form>
-                            }
-                      </fieldset>
-                *@
                     </div>
                 </div>
-            </div>
-            <!-- area titulo geral -->
+                <!-- area titulo geral -->
 
-            <!-- area Paginas Cadastradas -->
-            <div class="card">
-                <div class="card-header" id="headingTwo">
-                    <h2 class="mb-0">
-                        <span class="fa fa-book"></span> Paginas Cadastradas
-                        <a class="btn_toggle fa fa-arrow-circle-down fa-pull-right"   data-toggle="collapse" data-target="#tabPaginasCadastradas"></a>
-                    </h2>
-                </div>
-                <div id="tabPaginasCadastradas" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionExample">
-                    <div class="card-body">
-
-                        <button style="margin-left:920px; margin-top:-10px; width: 200px;" type="button" onclick="location.href='@Url.Action("Index","managerAlteracaoPaginas",new { idPagina = "newPage" })'" class="btn btn-outline-success"> <span class="fa fa-plus-circle"></span> &nbsp; Incluir nova pagina </button>
-                        <br />
-                        <br />
-
-                        <table id="listagem_telas" class="table table-striped table-bordered table-sm" align="center" data-page-length='5'>
-                            <thead>
-                                <tr>
-                                    <th scope="col"> ID </th>
-                                    <th scope="col"> Pagina </th>
-                                    <th scope="col"> Titulo da Aba </th>
-                                    <th scope="col"> conteudo da pagina </th>
-                                    <th scope="col"> Possui foto ? </th>
-                                    <th scope="col"> Tem Formulario ? </th>
-                                    <th scope="col"> Galeria Principal ? </th>
-                                    <th scope="col"> Alterar dados </th>
-                                </tr>
-                            </thead>
-                            <tbody>
-                                @foreach (ItemsPaginaGeral dadosPagina in Model.listaPaginasSistema)
-                                {
-                                    var temFoto = dadosPagina.hasFoto == true ? "Sim" : "Não";
-                                    var temForm = dadosPagina.hasForm == true ? "Sim" : "Não";
-                                    var isGaleria = dadosPagina.isMainPhoto == true ? "Sim" : "Não";
-                                    var conteudoPagina = "";
-                                    if (dadosPagina.conteudo_pagina != null){
-
-                                        if (dadosPagina.conteudo_pagina.Length > 105)
-                                        {
-                                            conteudoPagina = dadosPagina.conteudo_pagina.Trim().Substring(0, 60) + "...";
-                                        }
-                                        else
-                                        {
-                                            conteudoPagina = dadosPagina.conteudo_pagina.Trim();
-                                        }
-                                    }
-
-                                    <tr>
-                                        <th scope="row"> @dadosPagina.id_pagina </th>
-                                        <td> @dadosPagina.nome_pagina.Trim() </td>
-                                        <td> @dadosPagina.titulo_aba.Trim() </td>
-                                        <td> @Html.Raw(conteudoPagina) </td>
-                                        <td> @temFoto </td>
-                                        <td> @temForm </td>
-                                        <td> @isGaleria </td>
-                                        <td>
-                                            <div class="form-check-inline">
-                                                @if (dadosPagina.nome_pagina != "_main")
-                                                {
-                                                    <a style="margin:20px;" href="" onclick="deletaPagina(@dadosPagina.id_pagina)" data-placement="top" title="Excluir Pagina" class="tip-top fas fa-trash fa-2x"></a>
-                                                }
-                                                @if (dadosPagina.hasFoto == true)
-                                                {
-                                                    <a href="" data-placement="top" style="margin:20px;" class="tip-top" title="Incluir Fotos" data-toggle="modal" onclick="setDataModalFotos('@dadosPagina.nome_pagina')" data-target="#modalDinamico" shref=""><img width="30" height="30" src="~/icons/icon_photo.png" /></a>
-                                                }
-                                                @if (dadosPagina.hasForm == true)
-                                                {
-                                                    <a href="" data-placement="top" style="margin:20px;" class="tip-top" data-toggle="tooltip" title="Incluir Formulário" shref=""><img width="30" height="30" src="~/icons/form_icon.png" /></a>
-                                                }
-                                                <button type="button" style="width:110px;" onclick="location.href='@Url.Action("Index","managerAlteracaoPaginas",new {idPagina = @dadosPagina.nome_pagina.ToString()})'" class="tip-top btn btn-info" data-placement="top" data-toggle="tooltip" title="Alterar dados da tela"><span class="fas fa-pen"></span> &nbsp; Alterar </button>
-
-                                            </div>
-                                        </td>
-                                    </tr>
-                                }
-                            </tbody>
-                        </table>
-
+                <!-- area Paginas Cadastradas -->
+                <div class="card">
+                    <div class="card-header" id="headingTwo">
+                        <h2 class="mb-0">
+                            <span class="fa fa-book"></span> Paginas Cadastradas
+                            <a class="btn_toggle fa fa-arrow-circle-down fa-pull-right"   data-toggle="collapse" data-target="#tabPaginasCadastradas"></a>
+                        </h2>
+                    </div>
+                    <div id="tabPaginasCadastradas" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionExample">
+                        <div class="card-body">
+                            <partial name="~/Views/Components/ListagemPaginasCadastradas.cshtml" model="Model.listaPaginasSistema">
+                        </div>
                     </div>
                 </div>
-            </div>
-            <!-- area Paginas Cadastradas -->
+                <!-- area Paginas Cadastradas -->   
 
-            <div class="card">
-                <div class="card-header" id="headingThree">
-                    <h2 class="mb-0">
-                        <span class="fab fa-trello"></span> Configuração Curriculum
-                        <a class="btn_toggle fa fa-arrow-circle-down fa-pull-right" id="button-collapse" data-toggle="collapse" data-target="#collapseThree"></a>
-                    </h2>
-                </div>
-                <div id="collapseThree" class="collapse" aria-labelledby="headingThree" data-parent="#accordionExample">
-                    <div class="card-body">
-                        Em breve
+                <div class="card">
+                    <div class="card-header" id="headingThree">
+                        <h2 class="mb-0">
+                            <span class="fab fa-trello"></span> Configuração Curriculum
+                            <a class="btn_toggle fa fa-arrow-circle-down fa-pull-right" id="button-collapse" data-toggle="collapse" data-target="#collapseThree"></a>
+                        </h2>
+                    </div>
+                    <div id="collapseThree" class="collapse" aria-labelledby="headingThree" data-parent="#accordionExample">
+                        <div class="card-body">
+                            Em breve
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
+
     </div>
+    <div class="col col-md"></div>
 
-
-
-
-   
-
-
-    <partial name="~/Views/Shared/Manager/_ScriptsManagerPrincipal.cshtml">
+</div>
+ <partial name="~/Views/Shared/Manager/_ScriptsManagerPrincipal.cshtml">
 
 
 
